5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1590_1016.log
== TEST (2019-03-25 15:32:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
triangulo = float(input("Leia os comprimentos?"))
s = (a+b+c)/2
a = sqrt(s(s-a)(s-b)(s-c))
print(round(s ,5))
print(round(s, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    s = (a+b+c)/2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:32:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
triangulo = float(input("Leia os comprimentos?"))
s = (a+b+c)/2
a = sqrt(s(s-a)(s-b)(s-c))
print(round(s ,5))
print(round(s, 5))
-- EXECUTION TIME:
0.190955
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 6, in <module>
    s = (a+b+c)/2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:32:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
triangulo = float(input("Leia os comprimentos?"))
s = (a+b+c)/2
a = sqrt(s(s-a)(s-b)(s-c))
print(round(s ,5))
print(round(s, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    s = (a+b+c)/2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:32:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
triangulo = float(input("Leia os comprimentos?"))
s = (a+b+c)/2
a = sqrt(s(s-a)(s-b)(s-c))
print(round(s ,5))
print(round(s, 5))
-- EXECUTION TIME:
0.163873
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 6, in <module>
    s = (a+b+c)/2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:32:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
triangulo = float(input("Leia os comprimentos?"))
s = (a+b+c)/2
a = sqrt(s(s-a)(s-b)(s-c))
print(round(s ,5))
print(round(s, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    s = (a+b+c)/2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:32:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
triangulo = float(input("Leia os comprimentos?"))
s = (a+b+c)/2
a = sqrt(s(s-a)(s-b)(s-c))
print(round(s ,5))
print(round(s, 5))
-- EXECUTION TIME:
0.287083
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 6, in <module>
    s = (a+b+c)/2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:32:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
triangulo = float(input("Leia os comprimentos?"))
s = (a+b+c)/2
a = sqrt(s(s-a)(s-b)(s-c))
print(round(s ,5))
print(round(s, 5))
-- EXECUTION TIME:
0.143647
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 6, in <module>
    s = (a+b+c)/2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:33:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
triangulo = float(input("Leia os comprimentos?"))
s = (a+b+c)/2
a = sqrt(s(s-a)(s-b)(s-c))
print(round(s ,5))
print(round(a, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    s = (a+b+c)/2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:33:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
triangulo = float(input("Leia os comprimentos?"))
s = (a+b+c)/2
a = sqrt(s(s-a)(s-b)(s-c))
print(round(s ,5))
print(round(a, 5))
-- EXECUTION TIME:
0.147414
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 6, in <module>
    s = (a+b+c)/2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:33:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
triangulo = float(input("Leia os comprimentos?"))
s = (a+b+c)/2
a = sqrt(s(s-a)(s-b)(s-c))
print(round(s ,5))
print(round(a, 5))
-- EXECUTION TIME:
0.15779
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 6, in <module>
    s = (a+b+c)/2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:34:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
triangulo = float(input("Qual os comprimentos?"))
s = (a+b+c)/2
a = sqrt(s(s-a)(s-b)(s-c))
print(round(s ,5))
print(round(a, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    s = (a+b+c)/2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:34:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
triangulo = float(input("Qual os comprimentos?"))
s = (a+b+c)/2
a = sqrt(s(s-a)(s-b)(s-c))
print(round(s ,5))
print(round(a, 5))
-- EXECUTION TIME:
0.169438
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 6, in <module>
    s = (a+b+c)/2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:35:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
 x = float(input("Qual o comprimento de x?"))
s = (a+b+c)/2
a = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(s ,5))
print(round(a, 5))
-- ERROR:
File "XXXX", line 5
    x = float(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:35:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
 x = float(input("Qual o comprimento de x?"))
s = (a+b+c)/2
a = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(s ,5))
print(round(a, 5))
-- EXECUTION TIME:
0.193489
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 5
    x = float(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:37:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
x = float(input("Qual o comprimento de x?"))
y = float(input("Qual o comprimento de y?"))
z = float(input("Qual o comprimento de z?"))
s = (a+b+c)/2
a = sqrt(s*(s-x)*(s-y)*(s-z))
print(round(s ,5))
print(round(a, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s = (a+b+c)/2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:37:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
x = float(input("Qual o comprimento de x?"))
y = float(input("Qual o comprimento de y?"))
z = float(input("Qual o comprimento de z?"))
s = (a+b+c)/2
a = sqrt(s*(s-x)*(s-y)*(s-z))
print(round(s ,5))
print(round(a, 5))
-- EXECUTION TIME:
0.213166
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 8, in <module>
    s = (a+b+c)/2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:37:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
x = float(input("Qual o comprimento de x?"))
y = float(input("Qual o comprimento de y?"))
z = float(input("Qual o comprimento de z?"))
s = (a+b+c)/2
a = sqrt(s*(s-x)*(s-y)*(s-z))
print(round(s ,5))
print(round(a, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s = (a+b+c)/2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:37:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
x = float(input("Qual o comprimento de x?"))
y = float(input("Qual o comprimento de y?"))
z = float(input("Qual o comprimento de z?"))
s = (a+b+c)/2
a = sqrt(s*(s-x)*(s-y)*(s-z))
print(round(s ,5))
print(round(a, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s = (a+b+c)/2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:37:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
x = float(input("Qual o comprimento de x?"))
y = float(input("Qual o comprimento de y?"))
z = float(input("Qual o comprimento de z?"))
s = (ax+y+z)/2
a = sqrt(s*(s-x)*(s-y)*(s-z))
print(round(s ,5))
print(round(a, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s = (ax+y+z)/2
NameError: name 'ax' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:37:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
x = float(input("Qual o comprimento de x?"))
y = float(input("Qual o comprimento de y?"))
z = float(input("Qual o comprimento de z?"))
s = (x+y+z)/2
a = sqrt(s*(s-x)*(s-y)*(s-z))
print(round(s ,5))
print(round(a, 5))
-- OUTPUT:
21.85
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:37:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
x = float(input("Qual o comprimento de x?"))
y = float(input("Qual o comprimento de y?"))
z = float(input("Qual o comprimento de z?"))
s = (x+y+z)/2
a = sqrt(s*(s-x)*(s-y)*(s-z))
print(round(s ,5))
print(round(a, 5))
-- EXECUTION TIME:
0.17762
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:38:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = float(input("Qual o comprimento de x?"))
y = float(input("Qual o comprimento de y?"))
z = float(input("Qual o comprimento de z?"))
s = (x+y+z)/2
from math import*
a = sqrt(s*(s-x)*(s-y)*(s-z))
print(round(s ,5))
print(round(a, 5))
-- OUTPUT:
21.85
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = float(input("Qual o comprimento de x?"))
y = float(input("Qual o comprimento de y?"))
z = float(input("Qual o comprimento de z?"))
s = (x+y+z)/2
from math import*
a = sqrt(s*(s-x)*(s-y)*(s-z))
print(round(s ,5))
print(round(a, 5))
-- EXECUTION TIME:
0.187029
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = float(input("Qual o comprimento de x?"))
y = float(input("Qual o comprimento de y?"))
z = float(input("Qual o comprimento de z?"))
s = (x+y+z)/2
from math import*
a = sqrt(s*(s-x)*(s-y)*(s-z))
print(round(s ,5))
print(round(a, 5))
-- EXECUTION TIME:
0.200121
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:38:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = float(input("Qual o comprimento de x?"))
y = float(input("Qual o comprimento de y?"))
z = float(input("Qual o comprimento de z?"))
s = (x+y+z)/2
from math import*
a = sqrt(s*(s-x)*(s-y)*(s-z))
print(round(s ,5))
print(round(a, 5))
-- OUTPUT:
21.85
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:39:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = float(input("Qual o comprimento de x?"))
y = float(input("Qual o comprimento de y?"))
z = float(input("Qual o comprimento de z?"))
s = (x+y+z)/2
from math import*
a = sqrt(s*(s-x)*(s-y)*(s-z))
print(round(s ,5))
print(round(a, 5))
-- EXECUTION TIME:
0.135981
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
21.85
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
60.0
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
65.5
709.16654
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:39:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = float(input("Qual o comprimento de x?"))
y = float(input("Qual o comprimento de y?"))
z = float(input("Qual o comprimento de z?"))
s = (x+y+z)/2
from math import*
a = sqrt(s*(s-x)*(s-y)*(s-z))

print(round(a, 5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:39:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x = float(input("Qual o comprimento de x?"))
y = float(input("Qual o comprimento de y?"))
z = float(input("Qual o comprimento de z?"))
s = (x+y+z)/2
from math import*
a = sqrt(s*(s-x)*(s-y)*(s-z))

print(round(a, 5))
-- EXECUTION TIME:
0.219192
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
